@@ -6,6 +6,11 @@ List of significant changes to Data::Tumbler
 
 =cut
 
+=head2 Changes in Data::Tumbler 0.003 - 16th March 2014
+
+  Added dependency on Test::Most.
+  Tweak the example in the docs.
+
 =head2 Changes in Data::Tumbler 0.002 - 15th March 2014
 
   Remove Class::Tiny
